--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^10.1.0",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
@@ -57,6 +58,7 @@
     "jest": "29.3.1",
     "prettier": "^2.3.2",
     "prisma": "^4.11.0",
+    "prisma-erd-generator": "^1.5.4",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "29.0.3",
