Rota de criação de eventos

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@ SERVER_PORT=3000
 
 JWT_SECRET="TESTE_CHAVE"
 
-DATABASE_URL="DATABASE_URL_AQUI"
+DATABASE_URL="postgresql://postgres:Docker@localhost:5432/postgres?schema=public"
