--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "fs-extra": "^11.1.1",
+    "luxon": "^3.3.0",
+    "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
@@ -49,6 +51,8 @@
     "@types/express": "^4.17.13",
     "@types/fs-extra": "^11.0.1",
     "@types/jest": "29.2.4",
+    "@types/luxon": "^3.3.0",
+    "@types/moment": "^2.13.0",
     "@types/multer": "^1.4.7",
     "@types/node": "18.11.18",
     "@types/passport-jwt": "^3.0.8",
